[gd_scene load_steps=6 format=3 uid="uid://dhqydi3815ib6"]

[ext_resource type="FontFile" uid="uid://jl0jh7sfr5cs" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_8qab5"]
[ext_resource type="Script" path="res://UI/GameOver/game_over_ui.gd" id="1_emfrb"]
[ext_resource type="AudioStream" uid="uid://xjapdihqggce" path="res://assets/audio/game_over.wav" id="2_wg2p0"]

[sub_resource type="LabelSettings" id="LabelSettings_u2boy"]
font = ExtResource("1_8qab5")
font_size = 52
font_color = Color(1, 0.0352941, 0, 0.654902)
outline_size = 2
outline_color = Color(1, 0.756863, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bfnqq"]
font = ExtResource("1_8qab5")
font_size = 42
font_color = Color(0.815686, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0.775011, 0.775621, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0.270588, 1)

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emfrb")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_u2boy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "SPACE TO PLAY AGAIN"
label_settings = SubResource("LabelSettings_bfnqq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wg2p0")
volume_db = -35.763

[connection signal="timeout" from="ContinueTimer" to="." method="_on_continue_timer_timeout"]
